[package]
name = "md2nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.1"
markdown = "1.0.0-alpha.12"
owo-colors = "3.5.0"
prettytable = "0.10.0"
